# socratic

./: .gitignore  Bender.yml  Makefile  README.md  requirements.txt  socratic.core  sourceme.sh
.github/workflows/: smoke.yml
cfg/: chassis.example.yaml
docs/: fpga_ibex_plan.md
rtl/cores/socratic_ibex/: Bender.yml  METADATA.json  socratic_ibex.core  socratic_ibex_socket_adapter.sv
rtl/cores/socratic_ibex/rtl/: 1_prim_clock_mux2.sv  ibex_counter.sv  ibex_multdiv_fast.sv  ibex_multdiv_slow.sv  ibex_prefetch_buffer.sv
rtl/interfaces/: accel_socket_if.sv  core_socket_if.sv
rtl/mem/: soc_mem_ss.sv  soc_sram_slice_model.sv  soc_sram_slice_wrapper.sv  soc_sram_slice_xilinx.sv
rtl/pkg/: chassis_pkg.sv  mem_ss_pkg.sv  soc_bus_pkg.sv
rtl/platform/fpga/: soc_fpga.sv
rtl/platform/fpga/boards/axku5/: axku5.xdc  build_axku5.tcl  socratic_ibex_axku5_wrap.sv
rtl/platform/fpga/scripts/: load_elf.sh  openocd.cfg  run_elf.sh
rtl/top/: soc_top.sv
sw/: Makefile
sw/c/: CMakeLists.txt  gcc_toolchain.cmake
sw/c/common/: CMakeLists.txt  crt0.S  printf.c  printf.h  printf_io.c  sim_ctrl.c  sim_ctrl.h  uart.c  uart.h
sw/c/hello_world/: CMakeLists.txt  main.c
sw/c/self_check/: CMakeLists.txt  main.c
sw/common/: link.ld
tb/: ibex_soc_dut.sv  smoke_dut.sv  soc_sw_mon.sv  test_smoke.py  test_soc_sw.py
